# financial-manager

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
finman/application/: base_use_case.py  dtos.py  exceptions.py  utils.py
finman/application/use_cases/: __init__.py  delete_transaction.py  get_transaction_by_id.py  get_transactions.py  record_transaction.py  update_transaction.py
finman/domain/: entities.py  exceptions.py
finman/domain/interfaces/: __init__.py  transactions_repository.py  uow.py
finman/infrastructure/database/: models.py  repositories.py
finman/infrastructure/database/migrations/: env.py
finman/infrastructure/database/migrations/versions/: 1737820448_8831d56a4912_create_tables.py  1738009010_8c5bb6c10558_create_tables.py  1741687321_4892272343b3_create_tables.py
finman/main/: config.py
finman/presentation/: schemas.py
tests/integration/: conftest.py  test_transactions_repository.py
tests/unit/: conftest.py  test_get_transactions_use_case.py  test_record_transaction_use_case.py
tests/unit/use_cases/: test_get_transactions.py
