[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "financial-manager"
version = "0.1.0"
description = ""
authors = [
  {name = "Egor D", email = "d9d9.goga@gmail.com"},
]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}


[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "^2.10.5"
pydantic-extra-types = "^2.10.2"
pycountry = "^24.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
aiosqlite = "^0.20.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.1"
mypy = "^1.14.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]
line-length = 79
indent-width = 4

target-version = "py312"


[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/tests/*" = ["S101", "DTZ001", "PLR2004"]

[tool.ruff.lint.isort]
lines-after-imports = 2


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false


[tool.mypy]
python_version = "3.12"

warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true

disallow_untyped_globals = true
disallow_untyped_defs = true
disallow_subclassing_any = true

ignore_missing_imports = true

exclude = "(tests/.*|migrations/.*)"
